feat: Add RESP2 protocol, redis-cli compatibility and core Redis string commands
- Implement full RESP2 request parsing and response serialization
- Add redis-cli compatible communication
- Introduce command registry based execution
- Implement PING, ECHO, QUIT and COMMAND
- Add EXISTS, TTL, PTTL and TYPE
- Add INCR, DECR, INCRBY and DECRBY
- Add APPEND, STRLEN, MSET and MGET
- Improve expiration handling and persistence
- Support RESP Integer, Bulk String, Array, Null and Error responses