@@ -1,7 +1,6 @@
 package command.impl;
 
 import command.Command;
-import command.Commands;
 import protocol.Resp;
 import protocol.response.RespResponse;
 import storage.MiniRedis;
@@ -15,22 +14,20 @@ public class DelCommand implements RedisCommand {
     }
 
     @Override
-    public Commands getType() {
-        return Commands.DEL;
+    public String name() {
+        return "DEL";
     }
 
     @Override
     public RespResponse execute(Command command) {
 
         if (command.arguments().size() != 1) {
-            return Resp.error(
-                    "wrong number of arguments for 'DEL'"
-            );
+            return Resp.wrongArguments("DEL");
         }
 
-        String key = command.arguments().get(0);
-
-        redis.del(key);
+        redis.del(
+                command.arguments().getFirst()
+        );
 
         return Resp.ok();
 
